--- a/docs/demo.css
+++ b/docs/demo.css
@@ -14,7 +14,7 @@ body {
   padding-bottom: 200px;
   margin: 0;
   color: #404040;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 300;
   line-height: 1.5;
 }
