--- a/packages/odo-sassplate/tests/test.scss
+++ b/packages/odo-sassplate/tests/test.scss
@@ -326,3 +326,393 @@
     }
   }
 }
+
+@include test-module('component framework') {
+  @include test('can test whether a list includes a value') {
+    $list: ('odo', 'sassplate', 'odopod');
+    @include assert-equal(sassplate-list-contains-value($list, 'odo'), true);
+    @include assert-equal(sassplate-list-contains-value($list, 'sassplate'), true);
+    @include assert-equal(sassplate-list-contains-value($list, 'odopod'), true);
+    @include assert-equal(sassplate-list-contains-value($list, 'pod'), false);
+    @include assert-equal(sassplate-list-contains-value($list, 'foo'), false);
+  }
+
+  @include test('can convert strings to selectors') {
+    @include assert-equal(
+      type-of(sassplate-sanitize-selector(green)),
+      'string'
+    );
+
+    $base: 'foo';
+    $fromJson: '::after';
+    $selector: '#{$base}#{$fromJson}';
+    @include assert-equal(sassplate-sanitize-selector($selector), 'foo::after');
+  }
+
+  @include test('can determine the units for a value') {
+    @include assert-equal(get-value-with-units('foo'), 'foo');
+    @include assert-equal(get-value-with-units(10%), 10%);
+    @include assert-equal(get-value-with-units(10vw), 10vw);
+    @include assert-equal(get-value-with-units(10vh), 10vh);
+    @include assert-equal(get-value-with-units(10vmin), 10vmin);
+    @include assert-equal(get-value-with-units(10vmax), 10vmax);
+    @include assert-equal(get-value-with-units(10em), 10em);
+    @include assert-equal(get-value-with-units(10rem), 10rem);
+    @include assert-equal(get-value-with-units(10), 10px);
+    @include assert-equal(get-value-with-units(0), 0);
+  }
+
+  @include test('can convert unitless integers to pixels') {
+    @include assert {
+      @include output {
+        .selector {
+          @include set-value-with-units('border-radius', 3);
+        }
+      }
+
+      @include expect {
+        .selector {
+          border-radius: 3px;
+        }
+      }
+    }
+  }
+
+  @include test('can create a basic component and replaces named colors') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            position: relative,
+            display: inline-block,
+            color: blue,
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          position: relative;
+          display: inline-block;
+          color: #1b9ec6;
+        }
+      }
+    }
+  }
+
+  @include test('can create multiple components') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            position: relative,
+          ),
+          icon: (
+            width: 16,
+            height: 16,
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          position: relative;
+        }
+        .icon {
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+  }
+
+  @include test('handles pseudo classes and elements') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            position: relative,
+            hover: (
+              font-size: 12,
+            ),
+            ':valid': (
+              border: 1px solid blue,
+              border-color: blue,
+            ),
+            '::first-letter': (
+              line-height: 20,
+            ),
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          position: relative;
+        }
+        .btn:hover {
+          font-size: 12px;
+        }
+        .btn:valid {
+          border: 1px solid blue;
+          border-color: #1b9ec6;
+        }
+        .btn::first-letter {
+          line-height: 20px;
+        }
+      }
+    }
+  }
+
+  @include test('can have breakpoints') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            position: relative,
+            size: 40,
+            breakpoints: (
+              sm: (
+                border-radius: 50%,
+              ),
+              md: (
+                border-radius: 100%,
+              ),
+            ),
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          position: relative;
+          width: 40px;
+          height: 40px;
+        }
+        @media screen and (min-width: 768px) {
+          .btn {
+            border-radius: 50%;
+          }
+        }
+        @media screen and (min-width: 1024px) {
+          .btn {
+            border-radius: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  // Font families are defined in variables.json
+  @include test('will replace named font families') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            font-family: 'sans-serif',
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        }
+      }
+    }
+  }
+
+  @include test('will replace margin-top: flat') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            margin-top: 'flat',
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          margin-top: $text-flat-top-amount;
+        }
+      }
+    }
+  }
+
+  @include test('will not add units to line-height') {
+    @include assert {
+      @include output {
+        $data: (
+          foo: (
+            line-height: 1.2,
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .foo {
+          line-height: 1.2;
+        }
+      }
+    }
+  }
+
+  @include test('will unquote strings') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            '::after': (
+              content: '"hello world"',
+            ),
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn::after {
+          content: "hello world";
+        }
+      }
+    }
+  }
+
+  @include test('can have children') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            position: relative,
+            children: (
+              '.btn__text': (
+                font-size: 6vw,
+              ),
+            ),
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          position: relative;
+        }
+        .btn .btn__text {
+          font-size: 6vw;
+        }
+      }
+    }
+  }
+
+  @include test('can have modifiers') {
+    @include assert {
+      @include output {
+        $data: (
+          btn: (
+            display: inline-block,
+            modifiers: (
+              stroke: (
+                border: 1px solid black,
+                background-color: transparent,
+              ),
+              rounded: (
+                border-radius: 4,
+              ),
+            ),
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .btn {
+          display: inline-block;
+        }
+        .btn--stroke {
+          border: 1px solid black;
+          background-color: transparent;
+        }
+        .btn--rounded {
+          border-radius: 4px;
+        }
+      }
+    }
+  }
+
+  @include test('can have qualifiers') {
+    @include assert {
+      @include output {
+        $data: (
+          type-header-1: (
+            display: inline-block,
+            qualifiers: (
+              en: (
+                font-size: 10,
+                background-color: transparent,
+              ),
+              zh: (
+                font-size: 12,
+              ),
+            ),
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .type-header-1 {
+          display: inline-block;
+        }
+        .en .type-header-1 {
+          font-size: 10px;
+          background-color: transparent;
+        }
+        .zh .type-header-1 {
+          font-size: 12px;
+        }
+      }
+    }
+  }
+
+  @include test('can use "raw" selectors') {
+    @include assert {
+      @include output {
+        $data: (
+          input: (
+            display: inline-block,
+            raw: (
+              ':disabled:hover': (
+                cursor: not-allowed,
+              ),
+              ':invalid:focus': (
+                border-bottom: 1px solid red,
+              ),
+            ),
+          ),
+        );
+        @include sassplate-process-components($data);
+      }
+
+      @include expect {
+        .input {
+          display: inline-block;
+        }
+        .input:disabled:hover {
+          cursor: not-allowed;
+        }
+        .input:invalid:focus {
+          border-bottom: 1px solid red;
+        }
+      }
+    }
+  }
+}
