Dialog: allow dialogs to open other dialogs.

--- a/packages/odo-dialog/demos/styles/demo.css
+++ b/packages/odo-dialog/demos/styles/demo.css
@@ -203,3 +203,7 @@
 .scroll-to-close-dialog .ie11-padding-wrapper {
   background: white;
 }
+
+#inception .odo-dialog__inner {
+  padding: 40px;
+}
