Fix reveal demo. Update sassplate style guide files.

--- a/docs/odo-reveal/styles/demo.css
+++ b/docs/odo-reveal/styles/demo.css
@@ -12,7 +12,7 @@ body {
   padding-bottom: 800px;
 }
 
-.odo-responsive-img--cover {
+.background-image-cover {
   position: absolute;
   top: 0;
   left: 0;
