Adding new 'ExpandableAccordion' subclass that includes viewport scrolling and basic animations

--- a/packages/odo-expandable/demos/styles/demo.css
+++ b/packages/odo-expandable/demos/styles/demo.css
@@ -2,11 +2,21 @@
   display: none;
 }
 
-.odo-expandable__target--open {
+.expandable__target.odo-expandable__target--open {
   display: block;
 }
 
 .expandable__trigger {
   width: 100%;
+}
+
+.expandable__trigger--animated {
+  width: 100%;
+}
+
+.expandable__target--animated {
+  width: 100%;
+  overflow: hidden;
+  transition: height .3s ease-out;
 }
 
