--- a/packages/odo-expandable/demos/styles/demo.css
+++ b/packages/odo-expandable/demos/styles/demo.css
@@ -20,3 +20,12 @@
   transition: height .3s ease-out;
 }
 
+.expandable__trigger,
+.expandable__trigger--animated {
+  width: 100%;
+  border-radius: 0;
+  padding: 20px 0;
+  border: 2px solid aquamarine;
+  font-size: 16px;
+}
+
