--- a/packages/odo-sassplate/extensions/_variables.scss
+++ b/packages/odo-sassplate/extensions/_variables.scss
@@ -29,7 +29,7 @@ $grid-max-width--desktop: 1200px !default;
 $grid-max-width--mobile: 640px !default;
 
 $grid-container: 'container' !default;
-$grid-row: 'row' !default;
+$grid-grid: 'grid' !default;
 $grid-prefix: 'col' !default;
 $grid-sizes: (xs, sm, md, lg) !default;
 $grid-ratio-name: 'aspect' !default;
