--- a/docs/odo-expandable/styles/demo.css
+++ b/docs/odo-expandable/styles/demo.css
@@ -1,27 +1,24 @@
-.expandable__target {
+.demo-expand-content {
   display: none;
 }
 
-.expandable__target.odo-expandable__target--open {
+.demo-expand-content.odo-expandable__target--open {
   display: block;
 }
 
-.expandable__trigger {
+.demo-trigger {
   width: 100%;
 }
 
-.expandable__trigger--animated {
-  width: 100%;
-}
-
-.expandable__target--animated {
+.some-accordion-content {
+  height: 0;
   width: 100%;
   overflow: hidden;
-  transition: height .3s ease-out;
+  transition: height 0.3s ease-out;
 }
 
-.expandable__trigger,
-.expandable__trigger--animated {
+.demo-trigger,
+.an-accordion-trigger {
   width: 100%;
   border-radius: 0;
   padding: 20px 0;
@@ -29,3 +26,6 @@
   font-size: 16px;
 }
 
+.an-accordion-trigger.odo-expandable__trigger--open {
+  border-color: rebeccapurple;
+}
